...

            <com.example.util.simpletimetracker.feature_views.ButtonIconView
                android:id="@+id/btnChangeRecordStatistics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:visibility="gone"
                app:itemButtonIconRes="@drawable/statistics"
                app:itemButtonIconText="@string/shortcut_navigation_statistics"
                app:layout_constraintEnd_toStartOf="@id/btnChangeRecordDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...

                <androidx.cardview.widget.CardView
                    android:id="@+id/fieldChangeRecordTimeStarted"
                    style="@style/InputFieldCard"
                    android:layout_width="0dp"
...

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvChangeRecordTimeStartedDate"
                            style="@style/EditScreenField"
                            android:layout_width="wrap_content"
...
                            android:paddingEnd="0dp"
                            android:textColor="?colorAccent"
                            app:layout_constraintEnd_toStartOf="@id/tvChangeRecordTimeStartedTime"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
...

                <androidx.cardview.widget.CardView
                    android:id="@+id/fieldChangeRecordTimeEnded"
                    style="@style/InputFieldCard"
                    android:layout_width="0dp"
...

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvChangeRecordTimeEndedDate"
                            style="@style/EditScreenField"
                            android:layout_width="wrap_content"
...
                            android:paddingEnd="0dp"
                            android:textColor="?colorAccent"
                            app:layout_constraintEnd_toStartOf="@id/tvChangeRecordTimeEndedTime"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
...
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/change_record_type_field"
                        app:layout_constraintEnd_toStartOf="@id/layoutChangeRecordTypePreview"
                        app:layout_constraintStart_toStartOf="parent" />
...
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/change_record_tag_field"
                        app:layout_constraintEnd_toStartOf="@id/arrowChangeRecordCategory"
                        app:layout_constraintStart_toStartOf="parent" />
...
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/change_record_comment_field"
                        app:layout_constraintEnd_toStartOf="@id/arrowChangeRecordComment"
                        app:layout_constraintStart_toStartOf="parent" />
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChangeRecordComments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChangeRecordType"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChangeRecordCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/edit_screen_margin_horizontal"
        android:text="@string/change_record_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
