...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            app:elevation="0dp">

            <com.example.util.simpletimetracker.feature_views.StatisticsView
                android:id="@+id/viewStatisticsDetailItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                app:cardElevation="@dimen/record_type_card_elevation"
                app:itemDuration=""
                app:itemPercent=""
...
