...
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="marquee"
            android:paddingHorizontal="0dp"
            android:singleLine="true"
            android:text="@string/types_filter_show_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnChartFilterHideAll"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChartFilterHideAll"
...
